--- a/project2-week2/tf_learn/sentiment-analysis/Sentiment analysis with TFLearn.ipynb
+++ b/project2-week2/tf_learn/sentiment-analysis/Sentiment analysis with TFLearn.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -80,9 +80,7 @@
     "\n",
     "rows = reviews.iterrows()\n",
     "for idx, review in rows:\n",
-    "    review_words = review[0].split(\" \")\n",
-    "    for w in review_words:\n",
-    "        total_counts[w]+=1\n",
+    "    total_counts.update(review[0].split(\" \"))\n",
     "    \n",
     "print(\"Total words in data set: \", len(total_counts))"
    ]
@@ -96,11 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'the', '.', 'and', 'a', 'of', 'to', 'is', 'br', 'it', 'in', 'i', 'this', 'that', 's', 'was', 'as', 'for', 'with', 'movie', 'but', 'film', 'you', 'on', 't', 'not', 'he', 'are', 'his', 'have', 'be', 'one', 'all', 'at', 'they', 'by', 'an', 'who', 'so', 'from', 'like', 'there', 'her', 'or', 'just', 'about', 'out', 'if', 'has', 'what', 'some', 'good', 'can', 'more', 'she', 'when', 'very', 'up', 'time', 'no']\n"
+     ]
+    }
+   ],
    "source": [
     "vocab = sorted(total_counts, key=total_counts.get, reverse=True)[:10000]\n",
     "print(vocab[:60])"
@@ -115,11 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greats :  30\n"
+     ]
+    }
+   ],
    "source": [
     "print(vocab[-1], ': ', total_counts[vocab[-1]])"
    ]
@@ -137,13 +152,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "word2idx = ## create the word-to-index dictionary here"
+    "word2idx = {w:i for i,w in enumerate(vocab)}## create the word-to-index dictionary here    "
    ]
   },
   {
@@ -163,15 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def text_to_vector(text):\n",
-    "    \n",
-    "    pass"
+    "    input_v = np.zeros(len(vocab))\n",
+    "    for word in text.split(' '):\n",
+    "        idx = word2idx.get(word, None)\n",
+    "        if idx!=None:\n",
+    "            input_v[idx] += 1\n",
+    "    return input_v\n",
+    "    "
    ]
   },
   {
@@ -192,14 +212,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.,  1.,  0.,  0.,  2.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  2.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  1.,  0.,  0.,  0.,  1.,  1.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text_to_vector('The tea is for a party to celebrate '\n",
-    "               'the movie so she has no time for a cake')[:65]"
+    "               'the movie so she has no time for a cake')[:65]\n"
    ]
   },
   {
@@ -211,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -224,11 +260,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 18,   9,  27,   1,   4,   4,   6,   4,   0,   2,   2,   5,   0,\n",
+       "          4,   1,   0,   2,   0,   0,   0,   0,   0,   0],\n",
+       "       [  5,   4,   8,   1,   7,   3,   1,   2,   0,   4,   0,   0,   0,\n",
+       "          1,   2,   0,   0,   1,   3,   0,   0,   0,   1],\n",
+       "       [ 78,  24,  12,   4,  17,   5,  20,   2,   8,   8,   2,   1,   1,\n",
+       "          2,   8,   0,   5,   5,   4,   0,   2,   1,   4],\n",
+       "       [167,  53,  23,   0,  22,  23,  13,  14,   8,  10,   8,  12,   9,\n",
+       "          4,  11,   2,  11,   5,  11,   0,   5,   3,   0],\n",
+       "       [ 19,  10,  11,   4,   6,   2,   2,   5,   0,   1,   2,   3,   1,\n",
+       "          0,   0,   0,   3,   1,   0,   1,   0,   0,   0]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Printing out the first 5 word vectors\n",
     "word_vectors[:5, :23]"
@@ -245,13 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "Y = (labels=='positive').astype(np.int_)\n",
+    "\n",
     "records = len(labels)\n",
     "\n",
     "shuffle = np.arange(records)\n",
@@ -265,11 +324,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  1.],\n",
+       "       [ 1.,  0.],\n",
+       "       [ 0.,  1.],\n",
+       "       ..., \n",
+       "       [ 0.,  1.],\n",
+       "       [ 1.,  0.],\n",
+       "       [ 0.,  1.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trainY"
    ]
@@ -341,18 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Network building\n",
-    "def build_model():\n",
+    "def build_model(input_units, lr=0.1):\n",
     "    # This resets all parameters and variables, leave this here\n",
     "    tf.reset_default_graph()\n",
     "    \n",
     "    #### Your code ####\n",
+    "    net = tflearn.input_data(shape=[None, input_units]) #define input layer\n",
+    "    net = tflearn.fully_connected(net, 200, activation='ReLU') #define hidden layer1\n",
+    "    net = tflearn.fully_connected(net, 25, activation='ReLU') #define hidden layer2\n",
+    "    net = tflearn.fully_connected(net, 2, activation='softmax') #define output\n",
+    "    tflearn.regression(net, optimizer='sgd', learning_rate=lr, loss='categorical_crossentropy')\n",
     "    \n",
     "    model = tflearn.DNN(net)\n",
     "    return model"
@@ -371,13 +453,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/hushenglang/anaconda/envs/tflearn/lib/python3.5/site-packages/tflearn/summaries.py:46 in get_summary.: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
+      "Instructions for updating:\n",
+      "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
+      "WARNING:tensorflow:From /Users/hushenglang/anaconda/envs/tflearn/lib/python3.5/site-packages/tflearn/summaries.py:46 in get_summary.: scalar_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
+      "Instructions for updating:\n",
+      "Please switch to tf.summary.scalar. Note that tf.summary.scalar uses the node name instead of the tag. This means that TensorFlow will automatically de-duplicate summary names based on the scope they are created in. Also, passing a tensor or list of tags to a scalar summary op is no longer supported.\n",
+      "WARNING:tensorflow:From /Users/hushenglang/anaconda/envs/tflearn/lib/python3.5/site-packages/tflearn/helpers/trainer.py:766 in create_summaries.: merge_summary (from tensorflow.python.ops.logging_ops) is deprecated and will be removed after 2016-11-30.\n",
+      "Instructions for updating:\n",
+      "Please switch to tf.summary.merge.\n",
+      "WARNING:tensorflow:VARIABLES collection name is deprecated, please use GLOBAL_VARIABLES instead; VARIABLES will be removed after 2017-03-02.\n",
+      "WARNING:tensorflow:From /Users/hushenglang/anaconda/envs/tflearn/lib/python3.5/site-packages/tflearn/helpers/trainer.py:130 in __init__.: initialize_all_variables (from tensorflow.python.ops.variables) is deprecated and will be removed after 2017-03-02.\n",
+      "Instructions for updating:\n",
+      "Use `tf.global_variables_initializer` instead.\n"
+     ]
+    }
+   ],
    "source": [
-    "model = build_model()"
+    "learning_rate=0.1\n",
+    "model = build_model(word_vectors.shape[1], learning_rate)"
    ]
   },
   {
@@ -393,15 +496,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Step: 7950  | total loss: \u001b[1m\u001b[32m0.30784\u001b[0m\u001b[0m\n",
+      "| SGD | epoch: 050 | loss: 0.30784 - acc: 0.8658 | val_loss: 0.36035 - val_acc: 0.8533 -- iter: 20250/20250\n",
+      "Training Step: 7950  | total loss: \u001b[1m\u001b[32m0.30784\u001b[0m\u001b[0m\n",
+      "| SGD | epoch: 050 | loss: 0.30784 - acc: 0.8658 | val_loss: 0.36035 - val_acc: 0.8533 -- iter: 20250/20250\n",
+      "--\n"
+     ]
+    }
+   ],
    "source": [
     "# Training\n",
-    "model.fit(trainX, trainY, validation_set=0.1, show_metric=True, batch_size=128, n_epoch=10)"
+    "model.fit(trainX, trainY, validation_set=0.1, show_metric=True, batch_size=128, n_epoch=50)"
    ]
   },
   {
@@ -415,11 +530,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy:  0.85\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = (np.array(model.predict(testX))[:,0] >= 0.5).astype(np.int_)\n",
     "test_accuracy = np.mean(predictions == testY[:,0], axis=0)\n",
@@ -435,11 +558,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(positive) = 0.012 : Negative\n"
+     ]
+    }
+   ],
    "source": [
     "text = \"This movie is so bad. It was awful and the worst\"\n",
     "positive_prob = model.predict([text_to_vector(text.lower())])[0][1]\n",
