--- a/project4-week13/language-translation/dlnd_language_translation.ipynb
+++ b/project4-week13/language-translation/dlnd_language_translation.ipynb
@@ -14007,9 +14007,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:dl]",
+   "display_name": "Python [conda env:tensorflow]",
    "language": "python",
-   "name": "conda-env-dl-py"
+   "name": "conda-env-tensorflow-py"
   },
   "language_info": {
    "codemirror_mode": {
