--- a/project4-week13/language-translation/dlnd_language_translation.ipynb
+++ b/project4-week13/language-translation/dlnd_language_translation.ipynb
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2106,13 +2106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input\n",
+      "  Word Ids:      [83, 227, 48, 107, 143, 13, 116]\n",
+      "  English Words: ['he', 'saw', 'a', 'old', 'yellow', 'truck', '.']\n",
+      "\n",
+      "Prediction\n",
+      "  Word Ids:      [304, 124, 347, 223, 224, 244, 284, 151, 1]\n",
+      "  French Words: ['il', 'a', 'vu', 'un', 'vieux', 'camion', 'jaune', '.', '<EOS>']\n"
+     ]
+    }
+   ],
    "source": [
     "translate_sentence = 'he saw a old yellow truck .'\n",
     "\n",
@@ -2162,9 +2176,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow]",
+   "display_name": "Python [conda env:dl]",
    "language": "python",
-   "name": "conda-env-tensorflow-py"
+   "name": "conda-env-dl-py"
   },
   "language_info": {
    "codemirror_mode": {
